# TheWhisperDB

./: .gitignore  API_README.md  CMakeLists.txt  CURL_TESTS.md  LICENCE  README.md
data/: database.json
include/: config.hpp
include/const/: rest_enums.hpp
include/core/: GNode.hpp  GraphDB.hpp  node.hpp
include/embedding/: Clustering.hpp  EmbeddingClient.hpp  EmbeddingService.hpp  TextExtractor.hpp
include/http/: MultipartParser.hpp  Request.hpp
include/server/: FileStorage.hpp  UploadHandler.hpp  endpoint.hpp  upload_handler.hpp  wserver.hpp
include/tagging/: TagClient.hpp  TagService.hpp
src/: main.cpp
src/core/: GNode.cpp  GraphDB.cpp
src/embedding/: Clustering.cpp  EmbeddingClient.cpp  EmbeddingService.cpp  TextExtractor.cpp
src/http/: MultipartParser.cpp
src/server/: FileStorage.cpp  UploadHandler.cpp  upload_handler.cpp  wserver.cpp
src/tagging/: TagClient.cpp  TagService.cpp
utils/: generate_db.py
web/: app.py
web/static/css/: styles.css
web/static/js/: app.js
web/templates/: index.html
